<resources>

    # Menu

    <string name="sign_out">Sign out</string>

    # Task creation

    <string name="app_name">TODOka</string>
    <string name="add_task_title">Add new task</string>
    <string name="task_name">Add task name</string>
    <string name="add_category">Add category</string>
    <string name="completed_title">Completed</string>
    <string name="add_task">Add task</string>

    # Task lists

    <string name="today_task_list_title">Today</string>
    <string name="week_task_list_title">Week</string>
    <string name="later_task_list_title">Later</string>

    # Messages

    <string name="empty_list">List is empty</string>
    <string name="cancel_task_creation">Cancel</string>

</resources>
