<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="petrych.todoka.TaskActivity"
    android:weightSum="3"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/add_task_title"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/task_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            />

        <Spinner
            android:id="@+id/time_period_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/category_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/add_category"
            android:inputType="text"
            android:imeOptions="actionDone"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cancel_button"
                android:text="@string/add_task"
                android:background="@color/colorAccent"
                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_task_creation"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
